--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
         </nav>
     </header>
     <main>
-        <div id="MinhaImagem"><img id="eu" src="imagens/bruno.png" alt="Minha"></div>
-
+        <div class="container">
+            <div id="texto">
+                <h2>Olá&#128075, sou BRUNO SLOMINSKI</h2>
+                <h1>Desenvolvedor de Software</h1>
+                <p id="paragrafo_um">Eu sou Bruno Slominski, sou um desenvolvedor completo e dedicado
+                    a fazer o melhor software para a sua empresa.
+                </p>
+                <button id="botao_contrato">Me contrate</button>
+            </div>
+            <img id="eu" src="imagens/bruno.png" alt="Minha">
+        </div>
     </main>
 </body>
 </html> 
