--- a/index.html
+++ b/index.html
@@ -11,24 +11,31 @@
         <p style="font-weight: bold;">PORTFOLIO</p>
         
         <nav>
-            <a href="#">SKILLS</a>
-            <a href="#"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
-            <a href="#">CONTATO</a>
+            <a href="#skills">SKILLS</a>
+            <a href="#projetos"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
+            <a href="#contato">CONTATO</a>
 
         </nav>
     </header>
     <main>
-        <div class="container">
-            <div id="texto">
-                <h2>Olá&#128075, sou BRUNO SLOMINSKI</h2>
-                <h1>Desenvolvedor de Software</h1>
-                <p id="paragrafo_um">Eu sou Bruno Slominski, sou um desenvolvedor completo e dedicado
-                    a fazer o melhor software para a sua empresa.
-                </p>
-                <button id="botao_contrato">Me contrate</button>
+        <section id="inicio">
+            <div class="container">
+                <div id="texto">
+                    <h2>Olá&#128075, sou BRUNO SLOMINSKI</h2>
+                    <h1>Desenvolvedor de Software</h1>
+                    <p id="paragrafo_um">Eu sou Bruno Slominski, sou um desenvolvedor completo e dedicado
+                        a fazer o melhor software para a sua empresa.
+                    </p>
+                    <button id="botao_contrato">Me contrate</button>
+                </div>
+                <img id="eu" src="imagens/bruno.png" alt="Minha">
             </div>
-            <img id="eu" src="imagens/bruno.png" alt="Minha">
-        </div>
+        </section>
+
+        <section id="skills">
+            <h1>Skills</h1>
+            <h2>Tenho vasta experiência nas seguintes tecnologias:</h2>
+        </section>
     </main>
 </body>
 </html> 
