--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <header>
         <p style="font-weight: bold;">PORTFOLIO</p>
-        
+
         <nav>
             <a href="#skills">SKILLS</a>
             <a href="#projetos"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
@@ -19,7 +21,7 @@
     </header>
     <main>
         <section id="inicio">
-            <div class="container">
+            <div class="main-container">
                 <div id="texto">
                     <h2>Olá&#128075, sou BRUNO SLOMINSKI</h2>
                     <h1>Desenvolvedor de Software</h1>
@@ -30,12 +32,29 @@
                 </div>
                 <img id="eu" src="imagens/bruno.png" alt="Minha">
             </div>
-        </section>
-
-        <section id="skills">
-            <h1>Skills</h1>
-            <h2>Tenho vasta experiência nas seguintes tecnologias:</h2>
+        </section>         
+        <section id="skills"> 
+                <h1 class="text-center">Skills</h1>
+                <div class="container">
+                <h2 id="sub_skills">Tenho vasta experiência nas seguintes tecnologias:</h2>
+            </div>
+        
+        <div id="lists" class = "container">
+            <div class="list-row">
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+            </div>
+            <div class="list-row">
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+            </div>
+        </div>
         </section>
     </main>
 </body>
-</html> 
+
+</html>
