--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -41,18 +44,70 @@
         
         <div id="lists" class = "container">
             <div class="list-row">
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-            </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons" src="imagens/html-5.png" alt="icone-html">
+                    </div>
+                    <p class="abbr">HTML 5</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class = "icons" src="imagens/css-3.png" alt="icone-css">
+                    </div>
+                    <p class="abbr">CSS 3</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons" src="imagens/js.png" alt="icone-js">
+                    </div>
+                    <p class="abbr">JavaScript</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons" src="imagens/python.png" alt="ícone-python">
+                    </div>
+                    <p class="abbr">Python</p>
+                    </div>
+                </div>
+
+            
             <div class="list-row">
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
-                <div><img class="hexagono"src="imagens/hexagono (3).png" alt="hexágono"></div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons"src="imagens/git.png" alt="ícone-git">
+                    </div>
+                    <p class="abbr">Git</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons"src="imagens/github.png" alt="ícone-github">
+                    </div>
+                    <p class="abbr">GitHub</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons"src="imagens/mongodb_original_logo_icon_146424.png" alt="mongodb-icon">
+                    </div>
+                    <p class="abbr">MongoDB</p>
+                </div>
+                <div class="icon-p-container">
+                    <div class="icon-container">
+                        <img class="hexagon"src="imagens/hexagono (3).png" alt="hexágono">
+                        <img class="icons" src="imagens/typescript.png" alt="typescript-icon">
+                    </div>
+                    <p class="abbr">TypeScript</p>
+                </div>
             </div>
         </div>
+
+        <img id="pessoa" src="imagens/pessoa.png" alt="pessoa">
         </section>
     </main>
 </body>
