--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                     </p>
                     <button id="botao_contrato">Me contrate</button>
                 </div>
-                <img id="eu" src="imagens/bruno.png" alt="Minha">
+                <div id="img-square">
+                    <img id ="quadro"src="imagens/quadro.png" alt="quadro">
+                    <img id="eu" src="imagens/bruno.png" alt="Minha">
+                </div>
             </div>
         </section>         
         <section id="skills"> 
