--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <header>
-        <p style="font-weight: bold;">PORTFOLIO</p>
+        <a href="#inicio" style="font-weight: bold;">PORTFOLIO</a>
 
         <nav>
             <a href="#skills">SKILLS</a>
-            <a href="#projetos"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
+            <a href="#projects"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
             <a href="#contato">CONTATO</a>
 
         </nav>
@@ -122,14 +122,17 @@
                         <div class="project-box">
                             <img class="project-image" src="imagens/maps.png" alt="maps">
                             <p class="project-p">Fiz uma cópia funcional do Google Maps</p>
+                            <a class="button-project" href="https://www.google.com.br/maps" target="_blank" rel="External">Acesse o site<i class='bx bx-right-arrow-alt'></i></a>
                         </div>
                         <div class="project-box"> 
                             <img class="project-image" src="imagens/shop.png" alt="shop">
                             <p class="project-p">Fiz um e-commerce com HTML, CSS e JavaScript, com o backend em Python</p>
+                            <a class="button-project" href="https://www.pichau.com.br/" target="_blank" rel="External">Acesse o site<i class='bx bx-right-arrow-alt'></i></a>
                         </div>
                         <div class="project-box">
                             <img class="project-image" src="imagens/brain.png" alt="brain">
-                            <p class="project-p">Fiz uma cópia funcional do Google Maps</p>
+                            <p class="project-p">Fiz uma inteligência artificial capaz de gerar e editar imagens</p>
+                            <a class="button-project" href="https://www.midjourney.com/home/?callbackUrl=%2Fapp%2F" target="_blank" rel="External">Acesse o site<i class='bx bx-right-arrow-alt'></i></a>
                         </div>
                     </div>
             </div>
