--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="#skills">SKILLS</a>
             <a href="#projects"><img class="engrenagens" src="imagens/engrenagens.png" alt="Engrenagens">PROJETOS</a>
-            <a href="#contato">CONTATO</a>
+            <a href="#contact">CONTATO</a>
 
         </nav>
     </header>
@@ -136,7 +136,28 @@
                         </div>
                     </div>
             </div>
-    
+        </section>
+        <section id="contact">
+            <div class="container">
+                <div id="contact-container">
+                    <div id="content">
+                        <h1 class="text-center-contact">Me Contate</h1>
+                        <img src="imagens/imagem-contato.png" alt="contato">
+                    </div>
+                    
+                    <div id="forms">
+                        <form action="https://formsubmit.co/bruno_slominski@estudante.sesisenai.org.br" method="POST">
+                            <div>  
+                                <input class="form-input" type="email" name="email" placeholder="Seu enderço de e-mail"/>
+                                <textarea type="text" name="message" placeholder="Mensagem..." required></textarea>
+                                <button type="submit">Send</button>
+                                <input type="hidden" name="_next" value="#c">
+                                <input type="hidden" name="_captcha" value="false">
+                            </div>
+                    </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
