--- a/index.html
+++ b/index.html
@@ -160,8 +160,13 @@
             </div>
         </section>
 
-        <footer>
-            <img id="wave" src="imagens/wave.svg" alt="wave">
+        <footer id="footer">
+            <div id="footer-container">
+                <img id="wave" src="imagens/footer.png" alt="wave">
+                <div id="socials-container">
+                    <h3>Minhas Mídias Sociais</h3>
+                </div>
+            </div>
         </footer>
     </main>
 </body>
