--- a/index.html
+++ b/index.html
@@ -164,9 +164,21 @@
             <div id="footer-container">
                 <img id="wave" src="imagens/footer.png" alt="wave">
                 <div id="socials-container">
-                    <h3>Minhas Mídias Sociais</h3>
+                    <div id="socials-container-2">
+                        <h3 class="title-social">Minhas Mídias Sociais:</h3>
+                        <div id="social-media-container">
+                            <a class="social-media" href="#"><i class='bx bxl-linkedin-square'></i></a>
+                            <a class="social-media" href="#"><i class='bx bxl-whatsapp' ></i></a>
+                            <a class="social-media" href="#"><i class='bx bxl-twitter' ></i></a>
+                            <a class="social-media" href="#"><i class='bx bxs-envelope' ></i></a>
+                            
+                        </div>
+                    </div>
+
+                <div id="github-container">
+                    <h3 class="title-social">Mais projetos que trabalhei em:</h3>
                 </div>
-            </div>
+
         </footer>
     </main>
 </body>
