--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
 
                 <div id="github-container">
                     <h3 class="title-social">Mais projetos que trabalhei em:</h3>
+                    <a href="#" id="github-p">
+                        <i class='bx bxl-github'></i> <p id="github-link">@SloBruno</p> no GitHub
+                    </a>
                 </div>
 
         </footer>
