--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
                     <div id="socials-container-2">
                         <h3 class="title-social">Minhas Mídias Sociais:</h3>
                         <div id="social-media-container">
-                            <a class="social-media" href="https://www.linkedin.com/in/bruno-slominski-ba998a255"><i class='bx bxl-linkedin-square'></i></a>
-                            <a class="social-media" href="#"><i class='bx bxl-whatsapp' ></i></a>
-                            <a class="social-media" href="#"><i class='bx bxl-twitter' ></i></a>
-                            <a class="social-media" href="#"><i class='bx bxs-envelope' ></i></a>
+                            <a class="social-media" href="https://www.linkedin.com/in/bruno-slominski-ba998a255" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                            <a class="social-media" href="https://api.whatsapp.com/send?phone=5547999599302&text=Ol%C3%A1%2C%20vim%20pelo%20seu%20portf%C3%B3lio" target="_blank"><i class='bx bxl-whatsapp' ></i></a>
+                            <a class="social-media" href="https://twitter.com/brunooo_97" target="_blank"><i class='bx bxl-twitter' ></i></a>
+                            <a class="social-media" href="https://criarmeulink.com.br/u/1695906108" target="_blank"><i class='bx bxs-envelope' ></i></a>
                             
                         </div>
                     </div>
