--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
+    <link rel="shortcut icon" href="imagens/portfolioicon.png" type="image/x-icon">
 
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 
@@ -186,5 +186,5 @@
         </footer>
     </main>
 </body>
-
+<script src="./script.js"></script>
 </html>
